[package]
edition = "2021"
build = "build.rs"
name = "game-scanner"
description = "Game Scanner for any launcher and OS"
version = "1.2.0"
authors = ["Matheus Albino <matheusalbino@users.noreply.github.com>"]
license = "MIT"
keywords = ["api-bindings", "games"]
categories = ["api-bindings", "games"]
homepage = "https://github.com/EqualGames/game-scanner"
repository = "https://github.com/EqualGames/game-scanner"
readme = "README.md"
include = [
    "src/**/*.proto",
    "src/**/*.rs",
    "build.rs",
    "Cargo.toml",
]

[lib]
name = "game_scanner"
crate-type = ["rlib", "cdylib"]

[[bench]]
name = "list"
harness = false

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
serde_json = { version = "1.0.107" }
serde_yaml = { version = "0.9.25" }
url = { version = "2.4.1" }
sysinfo = { version = "0.29.10" }
prost = { version = "0.12.2" }
prost-types = { version = "0.12.1" }
bytes = { version = "1.5.0" }
chrono = { version = "0.4.31" }
directories = { version = "5.0.1" }

[target.'cfg(unix)'.dependencies]
rusqlite = { version = "0.29.0",  features = ["bundled"] }

[target.'cfg(windows)'.dependencies]
case = { version = "1.0.0" }
winreg = { version = "0.51.0" }
rusqlite = { version = "0.29.0", features = ["bundled-windows"] }

[dev-dependencies]
criterion = { version = "0.5.1" }

[build-dependencies]
prost-build = { version = "0.12.1" }
